Add initial version of Shenandoah log parser